# EDEL_twostage_onekernel

./: CMakeLists.txt  OCL_gpu.h  edel_host_one.c  input.h  kernmaker.h  ocl.c  ocl.h  settings.h  writeback.h
